Name:                   generic-lucid-scaffold
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               General-purpose web page scaffold for Lucid.
Description:
  This is a general organization scheme for web pages, implemented for Lucid.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Lucid.Scaffold
  Other-Modules:        Lucid.Scaffold.Internal
  Build-Depends:        base >= 4 && < 5
                      , lucid >= 2.5

Source-Repository head
  Type:                 git
--  Location:             
